--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
               </div>
               <div class="foot">
                 <p>&copy; Copyright 2018 Huddle. All rights reserved.</p>
-                <p class="attribution">Coded by <a href="https://portfolio-ten-chi-17.vercel.app/">Zcodes</a>..</p>
+                <p class="attribution">Coded by <a href="https://portfolio-ten-chi-17.vercel.app/" target="_blank">Zcodes</a>..</p>
               </div>
             </div>
           </div>
